Updated index.html for dropdown menus.

--- a/index.html
+++ b/index.html
@@ -23,28 +23,27 @@
 				<p>Registration Number</p>
 				<input name = "regNo" formmethod="POST" type="number" min="100000000" max="999999999" oninput="validity.valid||(value='');" maxlength="10" placeholder="170906969" required>
 			</div>
-			<div class = "inputContainer">
+			<div class = "inputContainer" id="flex-grow">
 				<p>Branch/Specialization</p>
-				<input name = "branch" list="branch" formmethod="POST" type="text" placeholder="-Your branch here-" required>
-				<datalist id="branch">
-					<option value="Aeronautical">
-					<option value="Automobile">
-					<option value="Biomediacal">
-					<option value="Biotechnology">
-					<option value="Chemical">
-					<option value="Civil">
-					<option value="Computer & Communication">
-					<option value="Computer Science">
-					<option value="Electrical & Electronics">
-					<option value="Electronics & Communication">
-					<option value="Industrial & Production">
-					<option value="Information Technology">
-					<option value="Instrumentation & Control">
-					<option value="Mechatronics">
-					<option value="Printing & Media">
-					<option value="Mechanical">
-					<option value="Others">
-				</datalist>
+				<select name = "branch" list="branch" formmethod="POST" type="text" placeholder = "-Select your branch-" required>
+					<option value="Aeronautical">Aeronautical</option>
+					<option value="Automobile">Automobile</option>
+					<option value="Biomedical">Biomedical</option>
+					<option value="Biotechnology">Biotechnology</option>
+					<option value="Chemical">Chemical</option>
+					<option value="Civil">Civil</option>
+					<option value="Computer & Communication">Computer & Communication</option>
+					<option value="Computer Science">Computer Science</option>
+					<option value="Electrical & Electronics">Electrical & Electronics</option>
+					<option value="Electronics & Communication">Electronics & Communication</option>
+					<option value="Industrial & Production">Industrial & Production</option>
+					<option value="Information Technology">Information Technology</option>
+					<option value="Instrumentation & Control">Instrumentation & Control</option>
+					<option value="Mechatronics">Mechatronics</option>
+					<option value="Printing & Media">Printing & Media</option>
+					<option value="Mechanical">Mechanical</option>
+					<option value="Others">Others</option>
+				</select>
 			</div>
 			<div class = "inputContainer">
 				<p>Semester</p>
